# ffmpeg-wasm

./: CMakeLists.txt  README.md  main.cpp
libs/lib/: libass.la  libfdk-aac.la  libfreetype.la  libfribidi.la  libharfbuzz-subset.la  libharfbuzz.la  libmp3lame.la  libogg.la  libopus.la  libtheora.la  libtheoradec.la  libtheoraenc.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la  libwavpack.la
wasm/build-scripts/: configure-ffmpeg.sh  var.sh
wasm/patches/: x265.pc
